--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,65 @@
 @import "tailwindcss";
 
+@theme {
+  /* 폰트 등록 */
+  --font-sans: var(--font-pretendard), ui-sans-serif, system-ui, sans-serif;
+
+  /* 컬러 등록 */
+  --color-primary: rgb(var(--primary));
+  --color-primary-foreground: rgb(var(--primary-foreground));
+  --color-background: rgb(var(--background));
+  --color-foreground: rgb(var(--foreground));
+
+  /* 라운드 */
+  --radius-sm: calc(var(--radius) - 4px); /* 체크박스 */
+  --radius-md: calc(var(--radius) - 2px); /* 버튼, 인풋 */
+  --radius-lg: var(--radius);
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* 컬러 지정 */
+  --primary: 59 130 246;
+  --primary-foreground: 255 255 255;
+  --background: 255 255 255;
+  --foreground: 23 23 23;
+
+  /* 라운드 지정 */
+  --radius: 0.5rem;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+[data-theme="purple"] {
+  --primary: 168 85 247;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/* 기본 스타일 */
+@layer base {
+  body {
+    /* 여기서 font-sans는 위 @theme에서 정의한 --font-sans를 호출 */
+    @apply font-sans antialiased tracking-tight text-base;
+    color: var(--color-foreground);
+    background-color: var(--color-background);
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  h1 {
+    @apply text-3xl font-bold;
+  }
+  h2 {
+    @apply text-2xl font-bold;
+  }
+  h3 {
+    @apply text-xl font-semibold;
+  }
+  p {
+    @apply text-base leading-relaxed;
+  }
+
+  /* 크롬, 사파리, 엣지의 자동완성 배경색을 투명하게 강제 고정 */
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    -webkit-text-fill-color: inherit !important; /* 글자색 유지 */
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset !important; /* 배경색을 투명으로 */
+    transition: background-color 5000s ease-in-out 0s !important; /* 색 변화 방지 */
+  }
 }
