--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
 
   /* 컬러 등록 */
   --color-primary: rgb(var(--primary));
+  --color-secondary: rgb(var(--secondary));
   --color-primary-foreground: rgb(var(--primary-foreground));
   --color-background: rgb(var(--background));
   --color-foreground: rgb(var(--foreground));
@@ -25,6 +26,7 @@
 :root {
   /* 컬러 지정 */
   --primary: 59 130 246;
+  --secondary: 100 100 100;
   --primary-foreground: 255 255 255;
   --background: 255 255 255;
   --foreground: 23 23 23;
